# letztestudienarbeit

data/: .gitignore
data/base/matthewproctor/: .gitignore  matthewproctor.html
data/base/opendatasoft/: .gitignore  opendatasoft.html
data/base/simplemaps/: .gitignore  simplemaps.html
data/new/: .gitignore
doc/: .gitignore  bibliographie.bib  main.tex
doc/content/: abstract.tex  acronyms.tex  appendix.tex
doc/content/chapter/: 01.tex  02.tex  03.tex  04.tex  05.tex  06.tex
doc/images/delete/: deletestats.txt
doc/images/delete/svg-inkscape/: BiggerElement_259200_1036800_svg-tex.pdf_tex  BiggerElement_64800_140974_svg-tex.pdf_tex
doc/images/queryall/: qallstats.txt
doc/images/queryall/svg-inkscape/: BigElement_140974_259200_svg-tex.pdf_tex  BiggerElement_16200_44692_svg-tex.pdf_tex
doc/images/querypre/: qprestats.txt
doc/images/querypre/svg-inkscape/: BigElement_140974_259200-16_svg-tex.pdf_tex  BigElement_16200_44692-16_svg-tex.pdf_tex  BigElement_16200_44692-4096_svg-tex.pdf_tex
doc/images/size/: sizestats.txt
doc/images/size/svg-inkscape/: size_all_bytes_svg-tex.pdf_tex  size_all_p100_svg-tex.pdf_tex  sizegrp_108.71876977991175_svg-tex.pdf_tex  sizegrp_144.24021663947218_svg-tex.pdf_tex  sizegrp_236.19757377979568_svg-tex.pdf_tex  (+2 more)
doc/notebooks/: notebook.ipynb
doc/settings/: include.tex  main.tex  shorts.tex
plan/: plan.md
src/rust/: .gitignore  Cargo.toml
src/rust/src/: main.rs
src/util/: display.html  firefox.screenshot  genall.py  rndgen.py
src/util/genenvelopes/: Cargo.toml
src/util/gengeojson/: Cargo.toml
(+2 files in other folders)
