[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
hprtree = { git = "https://github.com/Ya-hwon/hprtree", branch = "master" }
#kdbush = "0.2.0" # doesnt actually index structs
rstar = "0.11.0"
#static-bushes = "0.1.1" # auch nix
